--- a/pom.xml
+++ b/pom.xml
@@ -34,8 +34,8 @@
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-api</artifactId>
-            <version>5.7.1</version>
-            <scope>compile</scope>
+            <version>5.7.0</version>
+            <scope>test</scope>
         </dependency>
 
         <!-- Logger -->
