--- a/pom.xml
+++ b/pom.xml
@@ -59,6 +59,7 @@
             <groupId>com.codeborne</groupId>
             <artifactId>selenide</artifactId>
             <version>5.23.0</version>
+            <scope>compile</scope>
         </dependency>
     </dependencies>
 
